feat: add docker and env config with enhanced logging and validation
- Add Dockerfile and docker-compose.yml for containerization
- Implement environment variable configuration in .env
- Enhance logging in RouteOrchestrationService and GisApiClient
- Add API key validation and masking in ApiKeysConfig
- Improve error handling and logging throughout the codebase